--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head> <link rel="stylesheet" type="text/css" href="Kyan.css"> </head>
+<head> <link rel="stylesheet" type="text/css" href="index.css"> </head>
 <body>
     
     <form>
